# PIMLibrary

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  pytorch_setup.md
examples/: CMakeLists.txt  eltwise_add_hip.cpp
examples/hip/: CMakeLists.txt  custom_gemv_beta_test.cpp  custom_gemv_test.cpp  eltwise_add_hip.cpp  fim_bn.cpp  fim_elt_add.cpp  fim_elt_mul.cpp  fim_gemv.cpp  fim_memory_test.cpp  fim_relu.cpp  fim_sv_op.cpp  fim_util_test.cpp  gemv_hip.cpp  pim_bn.cpp  pim_copy.cpp  pim_d2d_copy.cpp  pim_device_test.cpp  pim_elt_add.cpp  pim_elt_mul.cpp  pim_fused_gemm.cpp  pim_gemm.cpp  pim_gemm_beta.cpp  pim_gemv.cpp  pim_memory_test.cpp  pim_rect_copy.cpp  pim_relu.cpp  pim_sv_op.cpp  pim_util_test.cpp  pimtest_main.cpp
examples/hip/elt_add_test/: CMakeLists.txt  Makefile  README.md  elt_add.cpp  elt_add_fim.cpp
examples/integration_test/: CMakeLists.txt
examples/integration_test/include/: test_bn.h  test_copy.h  test_custom_gemv_beta.h  test_eltwise.h  test_fused_gemm.h  test_gemm.h  test_relu.h  test_util.h
examples/miopen/: CMakeLists.txt  README.md  activation_relu_miopen.cpp  bn_miopen.cpp  eltwise_add_miopen.cpp  eltwise_add_miopen_fim.cpp  eltwise_mul_miopen.cpp  rnn_lstm_miopen.cpp
examples/monitor/android/: hello_world.cpp  hello_world_sample
examples/monitor/elt_add_test/: CMakeLists.txt  README.md  elt_add_fim.cpp  elt_add_fim_08_21.cpp
examples/monitor/elt_add_test_2/: CMakeLists.txt  elt_add_fim.cpp
examples/monitor/gemv_test/: CMakeLists.txt  gemv_fim.cpp
examples/monitor/opencl_sample/: CMakeLists.txt  devices.cpp  ld_st_test.cpp  sample_1.cpp  sample_2.cpp  sample_3.cpp  sample_4.cpp  sample_elt_add_test.cpp
examples/native/: CMakeLists.txt  eltwise_add_hip.cpp
examples/opencl/: gpu_add_test.cpp  pim_bn_test.cpp  pim_copy_test.cpp  pim_eltwise_add_test.cpp  pim_eltwise_mul_test.cpp  pim_eltwise_test.cpp  pim_gemm_test.cpp  pim_init.cpp  pim_memory_test.cpp  pim_relu_test.cpp
examples/pim_compiler/: CMakeLists.txt
examples/pim_compiler/hip/: elt_multiop.cpp  eltwise.cpp  gemv.cpp  mad.cpp  pimctest_main.cpp
examples/pytorch_custom_op/: fim_activation_test.py  fim_bn_test.py  fim_dense_test.py  fim_eltwise_add_test.py  fim_eltwise_mul_test.py  fim_gemv_test.py  fim_lstm_test.py  pim_activation_test.py  pim_bn_test.py  pim_dense_test.py  pim_eltwise_add_test.py  pim_eltwise_mul_test.py  pim_gemv_test.py  pim_lstm_test.py  test_sample_model.py
examples/tf_custom_op/: alexnet_latency.py  bert_latency_test.py  deep_speech2_func_test.py  deep_speech2_latency_test.py  fim_activation_test.py  fim_bn_test.py  fim_dense_test.py  fim_eltwise_add_test.py  fim_eltwise_mul_test.py  fim_gemv_test.py  fim_lstm_test.py  gnmt_latency_test.py  lstm_test.py  miopen_activation.py  miopen_bn_test.py  miopen_eltwise_add_test.py  miopen_eltwise_mul_test.py  pim_activation_test.py  pim_bn_test.py  pim_dense_test.py  pim_eltwise_add_test.py  pim_eltwise_mul_test.py  pim_gemv_test.py  pim_lstm_test.py  resnet50_latency.py  rnnt_test_latency.py  rtl_add_test.py  rtl_gemv_test.py  rtl_mul_test.py  rtl_relu_test.py  rtl_scalar_add_test.py  rtl_scalar_mul_test.py
examples/unit_test/: CMakeLists.txt  pim_d2d_copy.cpp  pim_device_test.cpp  pim_memory_test.cpp
py_fim_ops/: CMakeLists.txt  __init__.py
py_fim_ops/cc/: py_fim_bn.cpp  py_fim_dense.cpp  py_fim_lstm.cpp
py_fim_ops/python/: py_fim_activation_ops.py  py_fim_bn_ops.py  py_fim_deinit_ops.py  py_fim_dense_ops.py  py_fim_eltwise_ops.py  py_fim_gemv_ops.py  py_fim_init_ops.py  py_fim_lstm_ops.py
python_libs/py_pim_ops/: CMakeLists.txt  __init__.py
python_libs/py_pim_ops/cc/: py_pim_activation.cpp  py_pim_bn.cpp  py_pim_deinit.cpp  py_pim_dense.cpp  py_pim_eltwise.cpp  py_pim_gemv.cpp  py_pim_init.cpp  py_pim_lstm.cpp
python_libs/py_pim_ops/modules/: pim_activation.py  pim_bn.py  pim_dense.py  pim_eltwise.py  pim_gemv.py  pim_lstm.py
python_libs/py_pim_ops/python/: py_fim_activation_ops.py  py_fim_eltwise_ops.py  py_fim_gemv_ops.py  py_fim_init_ops.py  py_pim_bn_ops.py  py_pim_deinit_ops.py  py_pim_dense_ops.py  py_pim_lstm_ops.py
python_libs/tf_pim_ops/: CMakeLists.txt  __init__.py
runtime/source/: CMakeLists.txt  FimRuntime.cpp  PimRuntime.cpp  fim_runtime_api.cpp  pim_runtime_api.cpp
runtime/source/emulator/: FimEmulator.cpp  FimTraceCoalescer.cpp  PimEmulator.cpp  PimTraceCoalescer.cpp
runtime/source/executor/: FimExecutor.cpp  HIPExecutor.cpp  OpenCLExecutor.cpp  PimCommand.cpp  PimCompilerDriver.cpp  PimCrfBinGen.cpp  PimExecutor.cpp
runtime/source/manager/: FimCommand.cpp  FimControlManager.cpp  FimCrfBinGen.cpp  FimDevice.cpp  FimManager.cpp  FimMemoryManager.cpp  HIPMemManager.cpp  HipBlockAllocator.cpp  HipMemManager.cpp  OclBlockAllocator.cpp  OclMemManager.cpp  OpenCLMemManager.cpp  PimBlockAllocator.cpp  PimCommand.cpp  PimControlManager.cpp  PimCrfBinGen.cpp  PimDevice.cpp  PimManager.cpp  PimMemoryManager.cpp
runtime/source/utility/: assert_cl.cpp  fim_profile.cpp  fim_util.cpp  pim_log.cpp  pim_profile.cpp  pim_util.cpp
runtime/unit-tests/: CMakeLists.txt  FIM_MemTraceCoalescerUnitTest.cpp  PIM_MemTraceCoalescerUnitTest.cpp
runtime/unit-tests/test-traces/: 16byte_1channel_input.txt  32byte_1channel_output.txt
tf_fim_ops/: CMakeLists.txt  __init__.py
tf_fim_ops/cc/kernels/: fim_activation.cc  fim_bn.cc  fim_deinit.cc  fim_dense.cc  fim_eltwise.cc  fim_gemv.cc  fim_init.cc  fim_lstm.cc  miopen_activation.cc  miopen_bn.cc  miopen_eltwise.cc
tf_fim_ops/cc/ops/: fim_activation_ops.cc  fim_bn_ops.cc  fim_deinit_ops.cc  fim_dense_ops.cc  fim_eltwise_ops.cc  fim_gemv_ops.cc  fim_init_ops.cc  fim_lstm_ops.cc  miopen_activation_ops.cc  miopen_bn_ops.cc  miopen_eltwise_ops.cc
tf_fim_ops/python/ops/: fim_activation_ops.py  fim_deinit_ops.py  fim_eltwise_ops.py  fim_gemv_ops.py  fim_init_ops.py  fim_lstm_ops.py  miopen_activation_ops.py  miopen_bn_ops.py  miopen_eltwise_ops.py
tools/crfcodegen/: CMakeLists.txt  Main.cpp
tools/crfcodegen/include/: FimCmd.h  FimCrfBinGen.h  FimValidationChecker.h  PimCrfBinGen.h  PimValidationChecker.h  (+2 more)
(+462 files in other folders)
