include_directories(include)
if(NVIDIA)
    set(CMAKE_CXX_COMPILER "g++")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    include_directories(${PIM_PATH}/include)
    link_directories(opencl/lib)
    link_directories(opencl/lib/x86_64/)
endif()

if(AMD)
    set(CMAKE_CXX_COMPILER "${ROCM_PATH}/bin/hipcc")
    set(HCC_CXX_FLAGS  " --amdgpu-target=gfx900 --amdgpu-target=gfx906 --amdgpu-target=gfx908")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${HCC_CXX_FLAGS}")
    include_directories(${ROCM_PATH}/include)
    include_directories(${ROCM_PATH}/lib)
    include_directories(${ROCM_PATH}/opencl/include)
    link_directories(${ROCM_PATH}/opencl/lib)
    link_directories(${ROCM_PATH}/opencl/lib/x86_64/)
    file(GLOB HIP_SOURCES src/hip/*.cpp)
endif()

file(GLOB OPENCL_SOURCES src/opencl/*.cpp)
if(AMD)
    add_executable(PimIntegrationTests ${HIP_SOURCES})
    target_link_libraries(PimIntegrationTests gtest PimRuntime)
endif()
add_executable(OpenCLPimIntegrationTests ${OPENCL_SOURCES})

target_link_libraries(OpenCLPimIntegrationTests gtest_main gtest PimRuntime OpenCL -lpthread -lm)
